fixed overflow issue causing padding reset

--- a/styles.css
+++ b/styles.css
@@ -103,8 +103,8 @@ html, body {
 input[type="text"] {
     flex: 1;
     height: 50px;
-    width: 100%;
     border: none;
+    width: 90%;
     background: transparent;
     color: var(--dark-500);
     padding-left: 20px;
